# PyhDToolkit

./: .buildinfo  .codeclimate.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  404.html  Dockerfile  LICENSE  Makefile  README.md  api.doctree  api.html  bibliography.doctree  bibliography.html  codeautolink-cache.json  contributing.doctree  contributing.html  docker_conda_env.yml  environment.yml  fc.2  fc.3.aux  fc.34  fort.18  genindex.html  index.doctree  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  quickstart.doctree  quickstart.html  release.doctree  release.html  requirements.txt  search.html  searchindex.js  setup.py  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  checks.yml  coverage.yml  cron.yml  docker.yml  documentation.yml  publish.yml  tests.yml
_downloads/17554cbf48f83e7e579f86181b558e4b/: demo_phase_space.py
_downloads/367dfd0c77b4dfc6444c8f91af0c58c5/: demo_beam_enveloppe.ipynb
_downloads/3cbb3f36557e50b70e1f5465cd14efd7/: demo_acd_tracking_spectra.py
_downloads/430c307b3f50d69cc7583fe9f78940eb/: demo_stats_fitting.ipynb
_downloads/446d49440914a6332ae236a07ab473af/: demo_lhc_rigid_waist_shift.ipynb
_downloads/466c4ace11096429fa788f3332b96944/: demo_lattice.ipynb
_downloads/482b06a0e270c68169655442eba8390f/: demo_track_spectra.ipynb
_downloads/5a8235a89d8b89fd13f2e80e5edcba3f/: demo_lhc_crossing_schemes.py
_downloads/65333889a29072dddf163730c933c1f6/: demo_lattice.py
_downloads/68b93951b2b3f2ff503fc257f3039eda/: demo_machine_survey.ipynb
_downloads/6fbe5078a7897c6557628ff698a5a6e7/: demo_acd_tracking_spectra.ipynb
_downloads/751a88c0d09681be23341f03be8d3d26/: demo_tune_diagram.ipynb
_downloads/7cabb3812f439b2e815915ddd304a9ea/: demo_aperture.py
_downloads/7e283a496f5fe9ed949178b5d9d2c2b4/: demo_machine_survey.py
_downloads/813c3bff0f25029ff9ae3f0d0dc0751f/: demo_sbs_plotting.ipynb
_downloads/899de28bbf3c5a64a178d54c85f12977/: demo_tune_diagram.py
_downloads/92d99024e2e13e0ddcd6018dea27ea82/: demo_lhc_rigid_waist_shift.py
_downloads/9b30686f58ef3be5b1da644d2b70c269/: demo_beam_enveloppe.py
_downloads/a1f19b127996f7d41251de3596e93300/: demo_phase_space.ipynb
_downloads/ab3ed099c57146ff8b9d76dbf2af1409/: demo_sbs_plotting.py
_downloads/ba6161ec5ab4a7b7022fe3fc528992f5/: demo_aperture.ipynb
_downloads/bab1202eeaefd4e13d03725c949f55d6/: demo_lhc_setup.ipynb
_downloads/c0ec20fb0be0efb5979ec8613d7989f1/: demo_lhc_crossing_schemes.ipynb
_downloads/d19cfab0892200423c5762ea018bc990/: demo_lhc_setup.py
_downloads/d79a63556b1e95ae938e41be84f8f1b0/: demo_stats_fitting.py
_downloads/da42f6ab08c5bc8cb6606bcaeb4957d9/: demo_ir_errors.py
_downloads/db641700d2e96124547ab450e417d469/: demo_track_spectra.py
_downloads/e1d0fcf30dc06c28fb334066799d4d2a/: demo_ir_errors.ipynb
_modules/: index.html
_panels_static/: panels-variables.4b15212bc2faf4da239d738a7cf8e545.css
_sources/: api.rst.txt  bibliography.rst.txt  contributing.rst.txt  index.rst.txt  quickstart.rst.txt  release.rst.txt  sg_execution_times.rst.txt
_sources/api/: cpymadtools.rst.txt  models.rst.txt  optics.rst.txt  plotting.rst.txt
_sources/gallery/: demo_acd_tracking_spectra.rst.txt  demo_aperture.rst.txt  demo_beam_enveloppe.rst.txt  (+13 more)
_static/: documentation_options.js
api/: cpymadtools.doctree  cpymadtools.html  maths.doctree  maths.html  models.doctree  models.html  optics.doctree  optics.html  plotting.doctree  plotting.html  utils.doctree  utils.html
doc/: api.rst  conf.py  index.rst
docker/: Dockerfile  environment.yml
docs/: About_PyhDToolkit.md  Getting_Started.md  api.rst  conf.py  contributing.rst  index.rst  quickstart.rst  references.bib  release.rst  scripts.rst
examples/: README.rst  bar_label_demo.py  demo_acd_tracking_spectra.py  demo_aperture.py  demo_beam_enveloppe.py  demo_ir_errors.py  demo_lattice.py  demo_lhc_crossing_schemes.py  demo_lhc_rigid_waist_shift.py  demo_lhc_setup.py  demo_machine_survey.py  demo_phase_space.py  demo_sbs_plotting.py  demo_stats_fitting.py  demo_track_spectra.py  demo_tune_diagram.py  plot_aperture.py  plot_beam_enveloppe.py  plot_lhc_crossing_schemes.py  plot_machine_survey.py  plot_phase_space.py  plot_track_spectra.py  plot_tune_diagram.py
gallery/: demo_acd_tracking_spectra.doctree  demo_acd_tracking_spectra.html  demo_aperture.doctree  demo_aperture.html  demo_beam_enveloppe.doctree  demo_beam_enveloppe.html  demo_ir_errors.doctree  demo_ir_errors.html  demo_lattice.doctree  demo_lattice.html  demo_lhc_crossing_schemes.doctree  demo_lhc_crossing_schemes.html  demo_lhc_rigid_waist_shift.doctree  demo_lhc_rigid_waist_shift.html  demo_lhc_setup.doctree  demo_lhc_setup.html  demo_machine_survey.doctree  demo_machine_survey.html  demo_phase_space.doctree  demo_phase_space.html  demo_sbs_plotting.doctree  demo_sbs_plotting.html  demo_stats_fitting.doctree  demo_stats_fitting.html  demo_track_spectra.doctree  demo_track_spectra.html  demo_tune_diagram.doctree  demo_tune_diagram.html  index.doctree  index.html  sg_execution_times.doctree  sg_execution_times.html
pyhdtoolkit/: __init__.py  __version__.py  version.py
releases/: v0.10.0.doctree  v0.10.0.html  v0.11.0.doctree  v0.11.0.html  v0.12.0.doctree  v0.12.0.html  v0.13.0.doctree  v0.13.0.html  v0.13.1.doctree  v0.13.1.html  v0.13.2.doctree  v0.13.2.html  v0.13.3.doctree  v0.13.3.html  v0.14.0.doctree  v0.14.0.html  v0.14.1.doctree  v0.14.1.html  v0.15.0.doctree  v0.15.0.html  v0.15.1.doctree  v0.15.1.html  v0.16.0.doctree  v0.16.0.html  v0.16.1.doctree  v0.16.1.html  v0.17.0.doctree  v0.17.0.html  v0.18.0.doctree  v0.18.0.html  v0.19.0.doctree  v0.19.0.html  v0.19.1.doctree  v0.19.1.html  v0.2.0.doctree  v0.2.0.html  v0.2.1.doctree  v0.2.1.html  v0.20.0.doctree  v0.20.0.html  (+56 more)
search/: search_index.json
tests/: conftest.py  test_amplitude_detuning.py  test_beam.py  test_cpymadtools.py  test_maths.py  test_models.py  test_optics.py  test_tfstools.py  test_twiss.py  test_utils.py  test_version.py
(+413 files in other folders)
