[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyhdtoolkit/version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/docker",
  "/examples",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["pyhdtoolkit"]

[project]
name = "pyhdtoolkit"
readme = "README.md"
description = "An all-in-one toolkit package to ease my Python work in my PhD."
authors = [
    {name = "Felix Soubelet", email = "felix.soubelet@cern.ch"},
]
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.10"

keywords = [
  "PHD",
  "Accelerator Physics",
  "Physics Simulation",
  "Visualisation",
  "Docker",
  ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]

dependencies = [
  "numpy >= 2.0",
  "pandas >= 2.0",
  "matplotlib >=3.7",
  "scipy >= 1.6",
  "tfs-pandas >= 3.8",
  "loguru < 1.0",
  "cpymad >= 1.16",
  "rich >= 13.0",
  "pydantic >= 2.0",
  "pendulum >= 3.0",
  "optics-functions >= 0.1",
]

[project.optional-dependencies]
test = [
  "pytest >= 8.0",
  "pytest-cov >= 5.0",
  "pytest-xdist >= 3.0",
  "numba >= 0.60.0",
  "flaky >= 3.5",
  "pytest-randomly >= 3.3",
  "coverage[toml] >= 7.0",
  "pytest-mpl >= 0.14",
]
dev = [
  "black >= 24.0",
  "isort >= 5.10",
  "ruff >= 0.5",
]
docs = [
  "joblib >= 1.0",
  "Sphinx >= 7.0",
  "sphinx-rtd-theme >= 2.0",
  "sphinx-issues >= 4.0",
  "sphinx_copybutton < 1.0",
  "sphinxcontrib-bibtex >= 2.4",
  "sphinx-design >= 0.6",
  "sphinx-gallery < 1.0",
  "sphinx-prompt >= 1.5",
  "sphinx_codeautolink>=0.14",
]

all = [
  "pyhdtoolkit[dev]",
  "pyhdtoolkit[docs]",
  "pyhdtoolkit[test]",
]

[project.urls]
homepage = "https://github.com/fsoubelet/PyhDToolkit"
repository = "https://github.com/fsoubelet/PyhDToolkit"
documentation = "https://fsoubelet.github.io/PyhDToolkit"
changelog = "https://fsoubelet.github.io/PyhDToolkit/release.html"

# ----- Testing Configuration ----- #

[tool.pytest.ini_options]
addopts = "--mpl --no-flaky-report --cov-report=xml --cov-report term-missing --cov-config=pyproject.toml --cov=pyhdtoolkit"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyhdtoolkit/"]

[tool.coverage.report]
ignore_errors = true
omit = [
  "pyhdtoolkit/cpymadtools/setup.py",
  "pyhdtoolkit/utils/htc_monitor.py",
]
exclude_also = [
  "if TYPE_CHECKING:",  # do not count if TYPE_CHECKING block imports (ignored at runtime) for coverage
  "except ImportError:",  # do not count missing optional dependencies set to None, we monkeypatch and test that
]  
precision = 2

# ----- Dev Tools Configuration ----- #

[tool.isort]
atomic = true
ensure_newline_before_comments = true
filter_files = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = "pyhdtoolkit"
known_third_party = "pytest"
line_length = 110
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | acc-models-lhc
)/
'''

[tool.ruff]
target-version = "py310"  # Assume Python 3.10+.
line-length = 120
exclude = ["pyhdtoolkit/cpymadtools/lhc/__init__.py"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = [
  "E501",  # line-too-long
  "FBT001",  # boolean-type-hint-positional-argument
  "FBT002",  # boolean-default-value-positional-argument
  "PT019",  # pytest-fixture-param-without-value (but suggested solution fails)
]
